2009-03-15  Kentaro Sato <kentaro@ranvis.com>

	* timidity/miditrace.c:
	  Fix for Mac sound spectrum being out of sync in trace mode.
	* timidity/reverb.c:
	  Revert r1.69 change for panning delay that caused off-by-one.

2009-03-15  Kentaro Sato <kentaro@ranvis.com>

	* interface/w32g_c.c: Display errors reported on startup.
	* interface/w32g_utl.c: Add configuration fallbacks.
	* timidity/midi_a.c: Remove unused local variables.
	* timidity/sndfont.c:
	  CFG_FOR_SF_SUPPORT_FFT can be externally defined. (cfgforsf)

2009-03-04  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/ncurs_c.c, timidity/readmidi.c:
	  Fix to fit with MAX_CHANNELS > 32
	* timidity/playmidi.c (find_voice): Beautify

2008-12-06  Keishi Suenaga <skeishi@yahoo.co.jp>

	* configure.in: Fix mingw detection and replace wsock32 by ws2_32.
	* timidity/w32_libOggFLAC_dll.c: Small fix.
	* utils/getaddrinfo.c(new file), utils/Makefile.am, utils/net.c:
	  utils/net.h: Windows 2000 compatible network.

2008-05-22  Yair K. <cesium2@gmail.com>

	* interface/xaw_i.c: reinstate one line.

2008-05-22  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* utils/net.c: Fix for AI_ADDRCONFIG unsupported

2008-05-21  Yair K. <cesium2@gmail.com>

	* interface/server_c.c, libarc/url_ftp.c, libarc/url_http.c,
	  libarc/url_news.c, timidity/timidity.c, utils/net.c:
	  add ipv6 support.
	* timidity/sysdep.h: include more possible LP64 defines.
	* timidity/readmidi.c: fix for broken karaoke files produced
	  by abc2mid.
	* interface/xaw_i.c, interface/xaw.h: make compatible with
	  xaw3d v1.5, style changes.
	* interface/TiMidity(-uj).ad: move useButtom, useRight resources
	  from xaw_i.c to here.
	* timidity/oss_a.c: use 0x7fff arg to get maximum number of
	  fragments.  modernize ioctls a bit.

2008-04-16  Keishi Suenaga <skeishi@yahoo.co.jp>

	* interface/w32g_pref.c: WIN64 with AMD64 small fix

2008-04-16  Keishi Suenaga <skeishi@yahoo.co.jp>

	patches by Yair K.
	* interface/xaw_i.c, interface/x_trace.c, interface/x_trace.h: